--- a/css/style.css
+++ b/css/style.css
@@ -34,17 +34,12 @@ body{
 .titulo-principal{
   font-family: 'Roboto', sans-serif;
   font-weight: 900;
-  color: black;
+  color: #4792AD;
   text-align: center;
   padding-bottom: 10px;
 }
 
-div.banner-video{
-  background-color: rgb(233, 233, 233);
-  width:100%;
-  height: 800px;
-  padding: 40px 10px;
-}
+
 
 
 .banner-video .telefono{
